// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SpinnerButton should match snapshot with children 1`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
    type="button"
  >
    <span
      class="_button__label_doayp_24"
    >
      <span
        id="child1"
      />
      <span
        id="child2"
      />
    </span>
  </button>
</div>
`;

exports[`components/SpinnerButton should match snapshot with required props 1`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
    type="button"
  >
    <span
      class="_button__label_doayp_24"
    >
      Test
    </span>
  </button>
</div>
`;

exports[`components/SpinnerButton should match snapshot with spinning 1`] = `
<div>
  <button
    class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
    disabled=""
    type="button"
  >
    <span
      class="_button__label_doayp_24"
    >
      <span
        class="LoadingSpinner with-text"
        data-testid="loadingSpinner"
        id="loadingSpinner"
      >
        <span
          class="fa fa-spinner fa-fw fa-pulse spinner"
          title="Loading Icon"
        />
        Test
      </span>
    </span>
  </button>
</div>
`;
